--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/broccoli-and-chicken-stir-fry.html">Broccoli and Chicken Stir-Fry</a>
     </body>
 </html>
