Add more recipes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/broccoli-and-chicken-stir-fry.html">Broccoli and Chicken Stir-Fry</a>
+        <ul>
+            <li><a href="recipes/broccoli-and-chicken-stir-fry/broccoli-and-chicken-stir-fry.html">Broccoli and Chicken Stir-Fry</a></li>
+            <li><a href="recipes/baked-kale-chips/baked-kale-chips.html">Baked Kale Chips</a></li>
+            <li><a href="recipes/pecan-pie-cupcakes/pecan-pie-cupcakes.html">Pecan Pie Cupcakes</a></li>
+        </ul>
     </body>
 </html>
