Add css stylesheet

--- a/recipes/baked-kale-chips/baked-kale-chips.html
+++ b/recipes/baked-kale-chips/baked-kale-chips.html
@@ -4,12 +4,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Baked Kale Chips</title>
+        <link rel="stylesheet" href="../../styles.css">
     </head>
 
     <body>
         <h1>Baked Kale Chips</h1>
 
-        <img src="baked-kale-chips.webp" alt="baked kale chips in a white bowl" width="500">
+        <img class="recipe-img" src="baked-kale-chips.webp" alt="baked kale chips in a white bowl">
 
         <h2>Description</h2>
 
