--- a/recipes/broccoli-and-chicken-stir-fry/broccoli-and-chicken-stir-fry.html
+++ b/recipes/broccoli-and-chicken-stir-fry/broccoli-and-chicken-stir-fry.html
@@ -4,12 +4,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Broccoli and Chicken Stir-Fry</title>
+        <link rel="stylesheet" href="../../styles.css">
     </head>
 
     <body>
         <h1>Broccoli and Chicken Stir-Fry</h1>
 
-        <img src="broccoli-and-chicken-stir-fry.webp" alt="broccoli and chicken stir-fry on a large pan" width="500">
+        <img class="recipe-img" src="broccoli-and-chicken-stir-fry.webp" alt="broccoli and chicken stir-fry on a large pan">
 
         <h2>Description</h2>
 
