--- a/recipes/pecan-pie-cupcakes/pecan-pie-cupcakes.html
+++ b/recipes/pecan-pie-cupcakes/pecan-pie-cupcakes.html
@@ -4,12 +4,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Pecan Pie Cupcakes</title>
+        <link rel="stylesheet" href="../../styles.css">
     </head>
 
     <body>
         <h1>Pecan Pie Cupcakes</h1>
 
-        <img src="pecan-pie-cupcakes.webp" alt="pecan pie cupcakes on a plate" width="500">
+        <img class="recipe-img" src="pecan-pie-cupcakes.webp" alt="pecan pie cupcakes on a plate">
 
         <h2>Description</h2>
         <p>If you like the taste of butter pecan, you'll love these pecan pie cupcakes that you can bake up for guests in less than half the time!</p>
